Fix regression on vertical spacing of tabs #819

--- a/src/sass/_tabs.scss
+++ b/src/sass/_tabs.scss
@@ -43,6 +43,7 @@
 .tab-list {
   @include container();
   @include list.basics();
+  margin-bottom: 0;
 }
 
 .tab {
