--- a/src/search-results-page/index.scss
+++ b/src/search-results-page/index.scss
@@ -120,7 +120,7 @@ $_clear-button-inline-size: 48px;
 .search-results__page_count {
   @include typography.details();
   color: settings.$colour-text-primary;
-  margin-top: 1rem;
+  padding-top: 1rem;
   margin-bottom: 1rem;
   margin-left: functions.px-to-rem($_inline-margin);
 
